<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">uiBuilder</string>
    <string name="action_settings">Settings</string>
    
    <string name="overlay_desc">Handle for manipulation</string>

    <!-- DEFAULT TEXTS AND HINTS -->
    <string name="edittext_hint_default">Enter some text</string>
    <string name="checkbox_caption_default">Caption</string>
    
    <!-- MENU ACTION -->
    <string name="menu_action_export_gallery">Export</string>
    <string name="menu_action_export_share">Share</string>
    
    <!-- INTENT TITLES -->
    <string name="intent_title_share">Share design</string>
    
    <string name="intent_share_extra_subject">Fresh UI-Concept has been shared with you</string>
    <string name="intent_share_extra_text">Check-out the attached image file!</string>
    
    <!-- FEEDBACK -->
    <string name="confirmation_save_to_gallery">Your layout has been saved to the gallery</string>
    <string name="confirmation_share_via_mail">Your layout has been shared</string>

    <!-- ITEMBOX SIMPLE ELEMENTS -->
    <string name="itembox_simple_title">Simple Elements</string>
    <string name="itembox_simple_element_caption_button">Button</string>
    <string name="itembox_simple_element_caption_imageview">Image</string>
    <string name="itembox_simple_element_caption_textview">Text</string>
    <string name="itembox_simple_element_caption_edittext">Edit Text</string>
    <string name="itembox_simple_element_caption_container">Container</string>
    

    <!-- ITEMBOX COMPLEX ELEMENTS -->
    <string name="itembox_complex_title">Complex Elements</string>
    <string name="itembox_complex_element_caption_radio">Radiobutton</string>
    <string name="itembox_complex_element_caption_switch">Switch</string>
    <string name="itembox_complex_element_caption_checkbox">Checkbox</string>
    <string name="itembox_complex_element_caption_search">Search</string>
    <string name="itembox_complex_element_caption_numberpick">Picker</string>
    <string name="itembox_complex_element_caption_ratingbar">Rating</string>
    <string name="itembox_complex_element_caption_timepicker">Time</string>
    <string name="itembox_complex_element_caption_seekbar">Seekbar</string>
    <string name="itembox_complex_element_caption_list">List</string>
    <string name="itembox_complex_element_caption_grid">Grid</string>
    
    <string name="button_caption_default">Button</string>
    <string name="radios_caption_default">Option</string>
    <string name="item_edit_enter_text">Beschriftung des Objekts:</string>

    <!-- IMAGES EDIT-->
    <string name="item_edit_choose_camera">Camera</string>
    <string name="item_edit_choose_gallery">Gallery</string>
    <string name="imageview_content_description">Generic Image</string>
    <string name="item_edit_choose_caption">Choose Image</string>
    <string name="item_edit_choose_hint">Pre-scale the image element for best quality.</string>
    <string name="album_name">uiBuilder</string>
    
    <!-- LIST EDIT -->
    <string name="item_edit_list_caption">Choose List Layout</string>
    
    <!-- LIST EXAMPLE LAYOUTS -->
    	<!-- Layout Content in Editmode Fragment -->
	    <string name="listview_listitem_layout_1_header">Header</string>
	    <string name="listview_listitem_layout_1_content">Content</string>
	    
	        <!-- List Arrays SOURCE: hipsteripsum.me -->
	    
	    <string-array name="listview_listitem_layout_header">
	        
	        <item >Typewriter meggings tofu synth</item>
	        <item >8-bit scenester twee</item>
	        <item >Mlkshk helvetica dreamcatcher</item>
	        <item >VHS mixtape portland fap</item>
	        
	        <item >Hashtag +1 kale chips</item>
	        <item >Quinoa scenester ennui</item>
	        <item >Twee occupy terry richardson</item>
	        <item >Austin single-origin coffee</item>
	        
	        <item >Yr letterpress leggings</item>
	        <item >Art party vegan four loko enim</item>
	        <item >Wolf authentic readymade</item>
	        <item >Craft beer ugh</item>
	        
	        <item >Ad keytar incididunt 3</item>
	        <item >Chambray anim sartorial fap</item>
	        <item >3 wolf moon seitan fanny pack</item>
	        <item >Retro messenger bag elit</item>
	        
	        <item >Forage shoreditch brooklyn</item>
	        <item >Butcher disrupt ea, fashion axe</item>
	        <item >Aliqua nostrud nisi</item>
	        <item >Beard consectetur tattooed</item>
	        
	    </string-array>
	    
	    <string-array name="listview_listitem_layout_content">
	        
	        <item >Actually lo-fi single-origin coffee, plaid pitchfork iphone hashtag fixie fap swag.</item>
	        <item >Pop-up 90\'s hella fashion axe fixie. PBR hella biodiesel street art.</item>
	        <item >Umami trust fund gentrify messenger bag master cleanse, readymade kale chips occupy salvia +1</item>
	        <item >Gentrify vinyl squid irony gluten-free messenger bag mcsweeney\'s. Lomo sustainable ennui actually.</item>
	        
	        <item >Raw denim photo booth yr next level direct trade high life. Pickled yr church-key, twee wayfarers retro flexitarian truffaut.</item>
	        <item >Excepteur sapiente blue bottle, lo-fi literally ut irony plaid terry richardson.</item>
	        <item >Laboris typewriter anim wes anderson ad, irure locavore est salvia duis vero mcsweeney\'s. Small batch banjo tousled disrupt.</item>
	        <item >Raw denim photo booth yr next level direct trade high life. Pickled yr church-key, twee wayfarers retro flexitarian truffaut.</item>
	        
	        <item >Brunch etsy pour-over, terry richardson 90\'s single-origin coffee culpa.</item>
	        <item >Pitchfork ethical viral, meggings twee squid banksy reprehenderit farm-to-table trust fund.</item>
	        <item >Quis flannel shoreditch forage, cillum food truck commodo scenester master cleanse literally.</item>
	        <item >Pug do pinterest ex. Helvetica sint small batch flannel.</item>
	        
	        <item >Occupy sint adipisicing mcsweeney\'s. Wes anderson blog you probably haven\'t heard of them.</item>
	        <item >Rushwick magna aliqua hashtag trust fund forage sunt nihil kogi, typewriter tonx accusamus pickled eiusmod.</item>
	        <item >Portland twee craft beer dolor, direct trade fap hella cardigan helvetica. Terry richardson non plaid nostrud, bicycle rights gluten-free.</item>
	        <item >tonx squid occupy laborum twee trade high life. Pickled yr church-key, twee wayfarers retro flexitarian truffaut.</item>
	        
	        <item >Raw denim marfa thundercats, portland laboris echo park synth viral. Farm-to-table cillum non artisan.</item>
	        <item >Street art tousled brunch, ethical elit Austin art party terry richardson etsy anim brooklyn aliqua. Swag marfa pop-up, 8-bit.</item>
	        <item >Occupy american apparel pug, nihil culpa lo-fi bicycle rights brunch.</item>
	        <item >Salvia laboris tonx actually 90\'s. Ut mlkshk occupy, helvetica meggings odio ullamco consectetur commodo.</item>
	    </string-array>
	    
	<!-- GRID -->
	<string name="item_edit_grid_caption">Choose Grid Layout</string>
	<string name="item_edit_grid_columns_caption">Number Of Columns</string>
    
    <!-- ICONS EDIT -->
    <string name="item_edit_icon_caption">Choose Icon</string>
    
    <!-- Z-ORDER EDIT -->
    <string name="item_edit_z_order_caption">Z-Order</string>
    <string name="item_edit_z_order_front">Foreground</string>
    <string name="item_edit_z_order_back">Background</string>
    
    <!-- FONTSIZE EDIT-->
    <string name="item_edit_fontsize_caption">Fontsize</string>
    
	<!-- NOTHING TO EDIT -->
	<string name="item_nothing_caption">Nothing to customize here</string>
	
    <!-- EDITMODE TEXTELEMENT -->
    <string name="textview_content_default">Lorem Ipsum Dolor</string>
    <string name="item_edit_align_content">Ausrichtung des Inhalts</string>
    <string name="editmode_align_top_left">TOP LEFT</string>
    <string name="editmode_align_top_center">TOP CENTER</string>
    <string name="editmode_align_top_right">TOP RIGHT</string>
    <string name="editmode_align_center_left">CENTER LEFT</string>
    <string name="editmode_align_center_center">CENTER</string>
    <string name="editmode_align_center_right">CENTER RIGHT</string>
    <string name="editmode_align_bottom_left">BOTTOM LEFT</string>
    <string name="editmode_align_bottom_center">BOTTOM CENTER</string>
    <string name="editmode_align_bottom_right">BOTTOM RIGHT</string>
    <string name="item_edit_enter_item_count">Anzahl der Elemente</string>
    <string name="item_edit_star_count">Select number of Stars</string>
    <string name="item_edit_star_rating">Adjust rating</string>
  


    

</resources>