<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    
    android:id="@+id/editmode_module_z_order"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    
    android:orientation="vertical"
	style="@style/itembox">

    <TextView         
        style="@style/editbox_header"
        android:id="@+id/image_choose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/item_edit_z_order_caption" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        android:padding="@dimen/default_padding_large"
        >

        <Button
            android:id="@+id/editmode_z_order_front"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/item_edit_z_order_front" />

        <Button
            android:id="@+id/editmode_z_order_back"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/item_edit_z_order_back" />
    </LinearLayout>

</LinearLayout>