<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    
    android:id="@+id/editmode_entry_choose_picture"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="10dp"
    android:paddingBottom="20dp" >
    
    <TextView
        android:id="@+id/image_choose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/item_edit_enter_text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/image_choose_camera"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/item_edit_choose_camera"
			/>

        <Button
            android:id="@+id/image_choose_gallery"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/item_edit_choose_gallery" 
            />
    </LinearLayout>

</LinearLayout>