<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/default_padding_small"
    android:background="@drawable/object_background_default"
    android:orientation="horizontal"
    android:padding="@dimen/default_padding_medium" >

    <ImageView
        android:layout_width="95dp"
        android:layout_height="match_parent"
        android:background="@color/text_light"
        android:contentDescription="@string/imageview_content_description"
        android:scaleType="centerInside"
        android:src="@raw/ico_0048" />

    <TextView
        android:id="@+id/listview_listitem_header"
        style="@style/list_layout_1_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/background_light"
        android:padding="@dimen/default_padding_medium"
        android:text="@string/listview_listitem_layout_1_header" />

    <TextView
        android:id="@+id/listview_listitem_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/background_light"
        android:padding="2dp"
        android:text="@string/listview_listitem_layout_1_content"
        android:visibility="gone" />

</LinearLayout>