<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/designfragment_background"
    android:padding="@dimen/default_padding_medium" >

    <TextView
        android:id="@+id/itembox_entry_simple_title"
        style="@style/itembox_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/itembox_simple_title" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/itembox_entry_simple_title"
        android:orientation="vertical" >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:weightSum="3" >

            <LinearLayout
                style="@style/itembox_items"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical" >

                <ImageButton
                    android:id="@+id/element_button"
                    style="@style/itembox_items"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:scaleType="centerInside"
                    android:src="@raw/ui_builder_icon_button" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/superlight_grey"
                    android:gravity="center_horizontal"
                    android:text="@string/itembox_simple_element_caption_button" />
            </LinearLayout>

            <LinearLayout
                style="@style/itembox_items"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical" >

                <ImageButton
                    android:id="@+id/element_textview"
                    style="@style/itembox_items"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:scaleType="centerInside"
                    android:src="@raw/ui_builder_icon_textfield" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/superlight_grey"
                    android:gravity="center_horizontal"
                    android:text="@string/itembox_simple_element_caption_textview" />
            </LinearLayout>

            <LinearLayout
                style="@style/itembox_items"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical" >

                <ImageButton
                    android:id="@+id/element_imageview"
                    style="@style/itembox_items"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:scaleType="centerInside"
                    android:src="@raw/ui_builder_icon_image" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/superlight_grey"
                    android:gravity="center_horizontal"
                    android:text="@string/itembox_simple_element_caption_imageview" />
            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:weightSum="3" >

            <LinearLayout
                style="@style/itembox_items"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical" >

                <ImageButton
                    android:id="@+id/element_edittext"
                    style="@style/itembox_items"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:scaleType="centerInside"
                    android:src="@raw/ui_builder_icon_edittext" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/superlight_grey"
                    android:gravity="center_horizontal"
                    android:text="@string/itembox_simple_element_caption_edittext" />
            </LinearLayout>
        </TableRow>
    </TableLayout>

</RelativeLayout>